overlays/dev/fts3/fts3-env-patch.yaml
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: usdf-fts3
spec:
  template:
    spec:
      containers:
      - name: usdf-fts3
---
