overlays/dev/fts3/grid-certificates-patch.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: usdf-fts3
spec:
  template:
    spec:
      volumes:
       - name: ca-volume
         secret:
           $patch: delete
         emptyDir: {}
