overlays/dev/fts3/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: usdf-fts3-server
  labels:
    app: fts3-server
  annotations:
    kubernetes.io/ingress.class: nginx
    nginx.ingress.kubernetes.io/ssl-passthrough: "true"
    nginx.ingress.kubernetes.io/ssl-redirect: "true"
spec:
  tls:
    - hosts:
        - usdf-fts3-dev.slac.stanford.edu
        - usdf-fts3-dev-mon.slac.stanford.edu
      secretName: fts3-ingress-tls-secret
  rules:
    - host: usdf-fts3-dev.slac.stanford.edu
      http:
        paths:
          - path: /
            backend:
              service:
                name: usdf-fts3
                port:
                  number: 8446
            pathType: ImplementationSpecific 
    - host: usdf-fts3-dev-mon.slac.stanford.edu
      http:
        paths:
          - path: /
            backend:
              service:
                name: usdf-fts3
                port:
                  number: 8449
            pathType: ImplementationSpecific
